--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,45 @@
 appdirs==1.4.4
 beautifulsoup4==4.12.2
 blessed==1.20.0
+bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
+cssselect==1.2.0
+fake-useragent==1.3.0
+feedparser==6.0.10
 frozendict==2.3.8
 html5lib==1.1
 idna==3.4
+importlib-metadata==6.8.0
 inquirer==3.1.3
 lxml==4.9.3
 multitasking==0.0.11
 numpy==1.24.3
 pandas==2.0.2
+parse==1.19.1
 peewee==3.17.0
+pyee==8.2.2
+pyppeteer==1.0.2
+pyquery==2.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-editor==1.0.4
 pytz==2023.3
 readchar==4.0.5
 requests==2.31.0
+requests-html==0.10.0
 requests-toolbelt==1.0.0
+sgmllib3k==1.0.0
 six==1.16.0
 soupsieve==2.5
+tqdm==4.66.1
 tzdata==2023.3
-urllib3==2.0.4
+urllib3==1.26.18
+w3lib==2.1.2
 wcwidth==0.2.6
 webencodings==0.5.1
+websockets==10.4
 XlsxWriter==3.1.2
+yahoo-fin==0.8.9.1
 yfinance==0.2.31
+zipp==3.17.0
